cppcheck/cppcheck-output.txt
[1m/home/jovana/Desktop/vs/19-under-the-c/UNDER_THE_C/Sources/Music.cpp:16:9: [31merror:[39m There is an unknown macro here somewhere. Configuration is required. If foreach is a macro then please configure it. [unknownMacro][0m
        foreach(auto music, musics)
        ^
[1m/home/jovana/Desktop/vs/19-under-the-c/UNDER_THE_C/Sources/MenuScene.cpp:17:0: [31mstyle:[39m The function 'play' is never used. [unusedFunction][0m

^
